Cleanup of generics, switch expressions and deprecated APIs
Replace verbose generic instantiations with diamond operator across
all affected classes. Convert traditional switch statements to switch
expressions (Java 14+) in MidiCommand.toString(), QDataXMLReader,
and QDataYAMLWriter; also update the multi-statement switch in
writeEvent() to arrow-case syntax to eliminate break/fall-through.
Replace deprecated new URL(String) with URI.create().toURL() in
QDataLoader and YAMLDataLoader, catching both IllegalArgumentException
and MalformedURLException. Add missing @Override on MidiCommand.toString().